--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "aws-amplify": "^3.3.12",
+    "bootstrap": "^4.5.3",
+    "canvasjs": "^1.8.3",
+    "node-fetch": "^2.6.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
