Remove auth, as it's not actually needed

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,12 +1,5 @@
 {
-  "auth": {
-    "orcashipnoise": {
-      "service": "Cognito",
-      "providerPlugin": "awscloudformation",
-      "dependsOn": [],
-      "customAuth": false
-    }
-  },
+  "auth": {},
   "api": {
     "orcaShipnoiseApi": {
       "service": "AppSync",
