read recordings from HLS segment URLs directly
- remove Next.js clip proxy routes
- fetch clip data from backend and use returned HLS audio_urls for playback
- simplify recording lookup and playback path by eliminating URL construction

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "lucide-react": "^0.546.0",
+    "mux.js": "^6.3.0",
     "next": "^16.0.2-canary.19",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
