New files from Fly.io Launch

--- a/fly.toml
+++ b/fly.toml
@@ -1,13 +1,12 @@
-# fly.toml app configuration file generated for orca-shipnoise on 2025-12-09T00:52:39-08:00
+# fly.toml app configuration file generated for orca-shipnoise-sjdtow on 2026-02-28T02:49:09Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'orca-shipnoise'
-primary_region = 'iad'
+app = 'orca-shipnoise-sjdtow'
+primary_region = 'sjc'
 
 [build]
-  dockerfile = "Dockerfile"
 
 [http_service]
   internal_port = 8080
@@ -21,3 +20,4 @@ primary_region = 'iad'
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
+  memory_mb = 256
